# presian-asr

./: .env.example  .gitignore  README.md  persian_asr.spec  pyproject.toml
docs/phases/: phase-00-setup.md  phase-01-cli-asr.md  phase-02-pyqt-mvp.md  phase-03-threading.md  phase-04-export.md  phase-05-cpu-performance.md  phase-06-packaging.md
scripts/: check_env.sh  run_app.sh  run_cli.sh
src/persian_asr_app/: __init__.py  app_logging.py  config.py  main.py
src/persian_asr_app/core/: __init__.py  asr_engine.py  audio_utils.py  transcription_format.py
src/persian_asr_app/ui/: main_window.py
src/persian_asr_app/workers/: __init__.py  model_load_worker.py  transcription_worker.py
tests/: test_app_logging.py  test_asr_engine.py  test_audio_utils.py  test_model_load_worker.py  test_transcription_format.py  test_transcription_worker.py
