[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-asr-pyqt"
version = "0.1.0"
description = "Persian ASR desktop application using PyQt6 and Hugging Face Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "torch",
    "transformers",
    "accelerate",
    "safetensors",
    "soundfile",
    "librosa",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
persian-asr = "persian_asr_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
